...
                <Stack.Screen
                  name="(shop)"
                  options={{ headerShown: false, title: 'Shop' }}
                />
                <Stack.Screen
                  name="categories"
                  options={{ headerShown: false, title: 'Categories' }}
                />
                <Stack.Screen
                  name="product"
                  options={{ headerShown: false, title: 'Product' }}
                />
                <Stack.Screen
...
