appId: com.cengdong.rnshop
---
- runFlow: signin-flow.yaml
- tapOn: Sign In
- assertVisible: Invalid email address
- assertVisible: Password must be at least 6 characters long
