appId: com.cengdong.rnshop
---
- runFlow: signin-flow.yaml
- tapOn: 'Email'
- inputText: 'test@test.com'
- tapOn: 'Password'
- inputText: '123456'
- tapOn: 'Sign In'
- assertVisible: 'Signed in successfully'
- assertVisible: 'Hello cengdong'
