appId: com.cengdong.rnshop
---
- runFlow: signup-flow.yaml
- tapOn: 'Email'
- inputText: 'test@test.com'
- tapOn: 'Password'
- inputText: '111111'
- tapOn: 'Sign Up'
- assertVisible: 'User already registered'
