appId: com.cengdong.rnshop
---
- runFlow: signup-flow.yaml
- tapOn: Sign Up
- assertVisible: Invalid email address
- assertVisible: Password must be at least 6 characters long
