appId: com.cengdong.rnshop
---
- runScript: ../lib/generateEmail.js
- runFlow: signup-flow.yaml
- tapOn: 'Email'
- inputText: ${output.signup.email}
- tapOn: 'Password'
- inputText: '111111'
- tapOn: 'Sign Up'
- assertVisible: 'Signed up successfully'
